Deep links to location. #72

--- a/HalalGuide/Supporting Files/plist/Info.plist
+++ b/HalalGuide/Supporting Files/plist/Info.plist
@@ -21,8 +21,11 @@
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
+			<key>CFBundleURLName</key>
+			<string>dk.eazyit.halalguide</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
+				<string>halalguide</string>
 				<string>fb1483371188600221</string>
 			</array>
 		</dict>
