--- a/HalalGuide/Supporting Files/Settings.bundle/Acknowledgements.plist
+++ b/HalalGuide/Supporting Files/Settings.bundle/Acknowledgements.plist
@@ -295,6 +295,14 @@ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 		</dict>
 		<dict>
 			<key>FooterText</key>
+			<string>Copyright 2015 Google Inc.</string>
+			<key>Title</key>
+			<string>GoogleAnalytics</string>
+			<key>Type</key>
+			<string>PSGroupSpecifier</string>
+		</dict>
+		<dict>
+			<key>FooterText</key>
 			<string>Copyright (c) 2015 Tommy Sadiq Hinrichsen &lt;tommy.lynge@gmail.com&gt;
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
